--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
         <artifactId>h2</artifactId>
         <version>1.3.156</version>
     </dependency>
+		  <dependency>
+		  	<groupId>org.json</groupId>
+		  	<artifactId>json</artifactId>
+		  	<version>20131018</version>
+		  </dependency>
 	</dependencies>
 
 	<build>
