--- a/pom.xml
+++ b/pom.xml
@@ -98,13 +98,21 @@
         <artifactId>h2</artifactId>
         <version>1.3.156</version>
     </dependency>
+    
+    <dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-mail</artifactId>
+	<version>1.3.0.RELEASE</version>
+</dependency>
 		  <dependency>
 		  	<groupId>org.json</groupId>
 		  	<artifactId>json</artifactId>
 		  	<version>20131018</version>
 		  </dependency>
 	</dependencies>
+	
 
+	
 	<build>
 		<plugins>
 			<plugin>
