--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.mail.host = smtp.gmail.com
-spring.mail.username = 
-spring.mail.password = 
+spring.mail.username = 275cmpe
+spring.mail.password = Cmpe2751234$$
 
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.socketFactory.port = 587
