--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,13 @@
     </dependency>
     
     <dependency>
+	<groupId>com.fasterxml.jackson.datatype</groupId>
+	<artifactId>jackson-datatype-hibernate4</artifactId>
+	<version>2.6.3</version>
+</dependency>
+    
+    
+    <dependency>
 	<groupId>org.springframework.boot</groupId>
 	<artifactId>spring-boot-starter-mail</artifactId>
 	<version>1.3.0.RELEASE</version>
